--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
         <!-- Web dependencies -->
         <webjars-bootstrap.version>3.3.6</webjars-bootstrap.version>
         <webjars-jquery-ui.version>1.12.1</webjars-jquery-ui.version>
-        <webjars-jquery.version>3.3.0</webjars-jquery.version>
+        <webjars-jquery.version>2.0.0</webjars-jquery.version>
         <wro4j.version>1.8.0</wro4j.version>
     </properties>
 
@@ -88,6 +88,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
